--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,7 +3,16 @@
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+    "types": [],
+    "baseUrl": "src",
+    "paths": {
+      "@shared/*": [
+        "app/shared/*"
+      ],
+      "@core/*": [
+        "app/core/*"
+      ]
+    }
   },
   "files": [
     "src/main.ts",
