se integra firebase

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -11,6 +11,9 @@
       ],
       "@core/*": [
         "app/core/*"
+      ],
+      "@env/*": [
+        "app/environments/*"
       ]
     }
   },
