--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@angular/common": "~10.0.6",
     "@angular/compiler": "~10.0.6",
     "@angular/core": "~10.0.6",
+    "@angular/fire": "^6.0.2",
     "@angular/forms": "~10.0.6",
     "@angular/material": "^10.1.3",
     "@angular/platform-browser": "~10.0.6",
     "@angular/platform-browser-dynamic": "~10.0.6",
     "@angular/router": "~10.0.6",
     "bootstrap": "^4.5.2",
+    "firebase": "^7.19.0",
     "lodash": "^4.17.20",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
